--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -32,7 +32,6 @@
     }
 }
 
-
 /* -----------------------------------------------------------------------------
  * Base styles
  * -------------------------------------------------------------------------- */
@@ -50,7 +49,8 @@
 #waybar {
     background: #323232;
     color: white;
-    font-family: Cantarell, Noto Sans, sans-serif;
+    font-family: Noto Sans, sans-serif;
+    /* font-family: Cantarell, Noto Sans, sans-serif; */
     font-size: 15px;
 }
 
@@ -69,7 +69,6 @@
     padding-left: 10px;
     padding-right: 10px;
 }
-
 
 /* -----------------------------------------------------------------------------
  * Module styles
